--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href = "styles.css">
 
     <!-- Adding Tailwind CSS CDN link for basic configuration -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
     <!-- Link regarding the font family that we're going to use -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
